Incorporate TUV r1852 (code cleanup)
git-svn-id: https://svn.libreccm.org/ccm/trunk@94 8810af33-2d31-482b-a856-94f89814c4df